# multimodal-ai-fashion-semantic-search

./: README.md
backend/: .env.copy  .gitignore  README.md  README_VECTOR_TESTING.md  RUFF_GUIDE.md  create_vector_index_guide.md  generate_embeddings.py  main.py  pyproject.toml  ruff.toml  simple_mongodb_vector_test.py  test_vector_search.py  upload_dataset.py
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/image-search/: DownloadManager.tsx  ImageZoomModal.tsx  README.md  ResultDetailsModal.tsx  SearchFilters.tsx  SearchInterface.tsx  SearchResults.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/image-search/: SearchForm.tsx  index.ts  search-interface.tsx  search-results.tsx  search-stats.tsx
frontend/src/hooks/: use-api.ts  useMediaQuery.ts
frontend/src/lib/: api-client.ts  downloadUtils.ts
frontend/src/stores/: imageSearchStore.ts  imageZoomStore.ts  modalStore.ts
frontend/src/types/: api.ts
frontend/stores/: downloadStore.ts  imageSearchStore.ts  likedItemsStore.ts  modalStore.ts
