[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pillow>=11.2.1",
    "pymongo>=4.13.0",
    "ruff>=0.11.10",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
